--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   "devDependencies": {
     "bower": "^1.3.8",
     "grunt": "^0.4.5",
-    "grunt-bower-requirejs": "^0.11.0"
+    "grunt-bower-requirejs": "^0.11.0",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-requirejs": "^0.4.4",
+    "grunt-gh-pages": "^0.9.1"
   }
 }
