--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-gh-pages": "^0.9.1"
+  },
+  "dependencies": {
+    "bower": "^1.3.11",
+    "grunt": "^0.4.5",
+    "grunt-bower-requirejs": "^1.1.0",
+    "grunt-requirejs": "^0.4.2"
   }
 }
