--- a/sluice.cabal
+++ b/sluice.cabal
@@ -22,7 +22,8 @@ library
     Sluice.Canvas,
     Sluice.Scale,
     Sluice.Text,
-    Sluice.Ticks
+    Sluice.Ticks,
+    Sluice.Util
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.7 && <4.8,
